--- a/smarty/_footer.html
+++ b/smarty/_footer.html
@@ -74,14 +74,14 @@
 
 <link rel="stylesheet" href="<!--{$SITE__TEMPLATE}-->/css/linear-icons.css">
 
-<script type="text/javascript" src="<!--{$SITE__TEMPLATE}-->/js/jquery-1.12.4.min.js"></script>
-<script type="text/javascript" src="<!--{$SITE__TEMPLATE}-->/js/maskedinput.min.js"></script>
-<script type="text/javascript" src="<!--{$SITE__TEMPLATE}-->/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="<!--{$SITE__TEMPLATE}-->/js/owl.carousel.js"></script>
-<script type="text/javascript" src="<!--{$SITE__TEMPLATE}-->/js/modernizr.js"></script>
-<script type="text/javascript" src="<!--{$SITE__TEMPLATE}-->/js/fancybox.js"></script>
-<script type="text/javascript" src="<!--{$SITE__TEMPLATE}-->/js/main.js"></script>
-<script type="text/javascript" src="<!--{$SITE__TEMPLATE}-->/js/wow.js"></script>
+<script type="text/javascript" src="<!--{$SITE__TEMPLATE}-->/js/jquery-1.12.4.min.js<!--{$globalParams.cache_response}-->"></script>
+<script type="text/javascript" src="<!--{$SITE__TEMPLATE}-->/js/maskedinput.min.js<!--{$globalParams.cache_response}-->"></script>
+<script type="text/javascript" src="<!--{$SITE__TEMPLATE}-->/js/bootstrap.min.js<!--{$globalParams.cache_response}-->"></script>
+<script type="text/javascript" src="<!--{$SITE__TEMPLATE}-->/js/owl.carousel.js<!--{$globalParams.cache_response}-->"></script>
+<script type="text/javascript" src="<!--{$SITE__TEMPLATE}-->/js/modernizr.js<!--{$globalParams.cache_response}-->"></script>
+<script type="text/javascript" src="<!--{$SITE__TEMPLATE}-->/js/fancybox.js<!--{$globalParams.cache_response}-->"></script>
+<script type="text/javascript" src="<!--{$SITE__TEMPLATE}-->/js/main.js<!--{$globalParams.cache_response}-->"></script>
+<script type="text/javascript" src="<!--{$SITE__TEMPLATE}-->/js/wow.js<!--{$globalParams.cache_response}-->"></script>
 
 <script>
 	wow = new WOW({
