--- a/smarty/_promo.html
+++ b/smarty/_promo.html
@@ -9,7 +9,9 @@
                             <p><!--{$Parameters.index_profitable_solar_power}--></p>
                         </div>
                         <p class="section__dpn"><!--{$Parameters.index_leave_request}--></p>
-                        <a data-reveal-id="zvonok" class="btn b-large orange-color" title="Оставить заявку">Оставить заявку <span class="lnr lnr-chevron-right"></span></a>
+                        <div class="wow fadeInLeftBig" data-wow-duration=".2s">
+                            <a data-reveal-id="zvonok" class="btn b-large orange-color" title="Оставить заявку">Оставить заявку <span class="lnr lnr-chevron-right"></span></a>
+                        </div>
                     </div>
                 </div>
             </div>
