--- a/smarty/_seo.html
+++ b/smarty/_seo.html
@@ -32,9 +32,9 @@
 <!--{/if}-->
 <!--{/section}-->
 
-<link rel="stylesheet" type="text/css" href="<!--{$SITE__TEMPLATE}-->/css/main.css">
-<link rel="stylesheet" type="text/css" href="<!--{$SITE__TEMPLATE}-->/css/bootstrap.css">
-<link rel="stylesheet" type="text/css" href="<!--{$SITE__TEMPLATE}-->/css/responsive.css">
+<link rel="stylesheet" type="text/css" href="<!--{$SITE__TEMPLATE}-->/css/main.css<!--{$globalParams.cache_response}-->">
+<link rel="stylesheet" type="text/css" href="<!--{$SITE__TEMPLATE}-->/css/bootstrap.css<!--{$globalParams.cache_response}-->">
+<link rel="stylesheet" type="text/css" href="<!--{$SITE__TEMPLATE}-->/css/responsive.css<!--{$globalParams.cache_response}-->">
 
 <link rel="icon" href="<!--{$SITE__TEMPLATE}-->/favicon/favicon.ico" type="image/x-icon"/> 
 <link rel="shortcut icon" href="<!--{$SITE__TEMPLATE}-->/favicon/favicon.ico" type="image/x-icon"/>
