--- a/smarty/projects.html
+++ b/smarty/projects.html
@@ -66,7 +66,7 @@
                                     <a data-reveal-id="findprice" class="btn orange-color b-large b-60" title="<!--{$Parameters.get_price}-->"><!--{$Parameters.get_price}--></a>
                                 </div>   
                                 <!--{if $gallerylist.content[i].green_tarif == 1}-->
-                                <span class="col__project__tariff">Зеленый тариф</span>
+                                <span class="col__project__tariff"><!--{#PROJECT_green#}--></span>
                                 <!--{/if}-->		
                             </div>
                             <div class="title">
