--- a/smarty/_projects.html
+++ b/smarty/_projects.html
@@ -42,7 +42,7 @@
         </div> 
         <div class="row">
             <div class="col-lg-12 center wow fadeInRightBig" data-wow-duration=".2s">
-                <a href="<!--{$global_href}-->projects/" class="btn b-large orange-color" title="Смотреть все проекты">Смотреть все проекты <span class="lnr lnr-chevron-right"></span></a>
+                <a href="<!--{$global_href}-->projects/" class="btn b-large orange-color" title="<!--{#PROJECT_kt#}-->"><!--{#PROJECT_kt#}--> <span class="lnr lnr-chevron-right"></span></a>
             </div>
         </div>
     </div>
