--- a/smarty/_advantages.html
+++ b/smarty/_advantages.html
@@ -15,7 +15,7 @@
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-2 center">
 				<div class="col__advanages">
-					<img alt="<!--{$Parameters.customers_title_1}--> - «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_p4.png">
+					<img width="70px" alt="<!--{$Parameters.customers_title_1}--> - «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_4.png">
 					<div class="title">
 						<p><!--{$Parameters.customers_title_1}--></p>
 					</div>
@@ -24,7 +24,7 @@
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-2 center">
 				<div class="col__advanages">
-					<img alt="<!--{$Parameters.customers_title_2}--> - «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_p1.png">
+					<img width="70px" alt="<!--{$Parameters.customers_title_2}--> - «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_5.png">
 					<div class="title">
 						<p><!--{$Parameters.customers_title_2}--></p>
 					</div>
@@ -33,7 +33,7 @@
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-2 center">
 				<div class="col__advanages">
-					<img alt="<!--{$Parameters.customers_title_3}--> - «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_p5.png">
+					<img width="70px" alt="<!--{$Parameters.customers_title_3}--> - «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_6.png">
 					<div class="title">
 						<p><!--{$Parameters.customers_title_3}--></p>
 					</div>
@@ -42,7 +42,7 @@
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-2 center">
 				<div class="col__advanages">
-					<img alt="<!--{$Parameters.customers_title_4}--> - «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_p2.png">
+					<img width="70px" alt="<!--{$Parameters.customers_title_4}--> - «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_2.png">
 					<div class="title">
 						<p><!--{$Parameters.customers_title_4}--></p>
 					</div>
@@ -51,7 +51,7 @@
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-2 center">
 				<div class="col__advanages">
-					<img alt="<!--{$Parameters.customers_title_5}--> - «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_p6.png">
+					<img width="70px" alt="<!--{$Parameters.customers_title_5}--> - «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_6.png">
 					<div class="title">
 						<p><!--{$Parameters.customers_title_5}--></p>
 					</div>
@@ -60,7 +60,7 @@
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-2 center">
 				<div class="col__advanages">
-					<img alt="<!--{$Parameters.customers_title_6}--> - «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_p3.png">
+					<img width="70px" alt="<!--{$Parameters.customers_title_6}--> - «Maxisolar»" src="<!--{$SITE__TEMPLATE}-->/images/ico_1.png">
 					<div class="title">
 						<p><!--{$Parameters.customers_title_6}--></p>
 					</div>
