--- a/smarty/_header.html
+++ b/smarty/_header.html
@@ -13,12 +13,12 @@
                         <!--{if $Parameters.fb_link}-->
                         <li><a title="Facebook" target="_blank" href="<!--{$Parameters.fb_link}-->"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/facebook.svg"></a></li>
                         <!--{/if}-->
-                        <!--{if $Parameters.inst_link}-->
-                        <li><a title="Instagram" target="_blank" href="<!--{$Parameters.inst_link}-->"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/instagram.svg"></a></li>
-                        <!--{/if}-->
                         <!--{if $Parameters.viber_link}-->
                         <li><a title="Viber" target="_blank" href="viber://chat?number=+<!--{$Parameters.viber_link}-->"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/viber.svg"></a></li>
-                        <li class="visible-xs-inline-block"><a title="Viber" target="_blank" href="viber://add?number=<!--{$Parameters.viber_link}-->"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/viber.svg"></a></li>				
+                        <li class="visible-xs-inline-block"><a title="Viber" target="_blank" href="viber://add?number=<!--{$Parameters.viber_link}-->"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/viber.svg"></a></li>
+                        <!--{/if}-->                       
+                        <!--{if $Parameters.inst_link}-->
+                        <li><a title="Instagram" target="_blank" href="<!--{$Parameters.inst_link}-->"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/instagram.svg"></a></li>
                         <!--{/if}-->
                         <!--{if $Parameters.tgme_link}-->
                         <li><a title="Telegram" target="_blank" href="https://t.me/<!--{$Parameters.tgme_link}-->"><img width="24px" src="<!--{$SITE__TEMPLATE}-->/images/social_icon/telegram.svg"></a></li>
@@ -46,39 +46,37 @@
     <div class="header__navigation">
         <div class="container-full">
             <div class="row">
-                <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2">
-                    <div class="logo">
-                        <a href="<!--{$global_href}-->" title="<!--{$Parameters.company}-->">
-                            <img src="<!--{$globalParams.logo}-->" alt="<!--{$Parameters.company}-->">
-                        </a>
-                    </div> 
-                </div>
-                <div class="col-xs-12 col-sm-4 col-md-8 col-lg-8">
-                    <nav class="navigation">
-                        <ul class="hidden-xs hidden-sm hidden-md">
-                            <!--{section name=i loop=$MMenu}-->
-                                <li<!--{if $MMenu[i].smenu}--> class="dropdown"<!--{/if}-->>
-                                    <!--{if $MMenu[i].smenu}-->
-                                        <a class="dropdown-link" href="<!--{$MMenu[i].sysname}-->" title="<!--{$MMenu[i].name}-->"><!--{$MMenu[i].name}--> <i class="lnr lnr-chevron-down"></i></a>
-                                    <!--{else}-->
-                                        <a href="<!--{$MMenu[i].sysname}-->" title="<!--{$MMenu[i].name}-->"><!--{$MMenu[i].name}--></a>
-                                    <!--{/if}-->
-                                        <!--{if $MMenu[i].smenu}-->
-                                            <ul>
-                                            <!--{section name=j loop=$MMenu[i].smenu}-->
-                                                <li><a href="<!--{$MMenu[i].smenu[j].sysname}-->" title="<!--{$MMenu[i].smenu[j].name}-->"><!--{$MMenu[i].smenu[j].name}--></a></li>
-                                            <!--{/section}-->
-                                            </ul>
-                                        <!--{/if}-->
-                                </li>
-                            <!--{/section}-->
-                        </ul>
-                    </nav>
-                </div>
-                <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2">
-                    <div class="header__button">
-                        <a data-reveal-id="zvonok" title="<!--{$Parameters.btn_zvonok}-->" class="btn b-full b-small orange-color"><span class="lnr lnr-phone-handset"></span> <!--{$Parameters.btn_zvonok}--></a> 
+                <div class="logo">
+                    <a href="<!--{$global_href}-->" title="<!--{$Parameters.company}-->">
+                        <img src="<!--{$globalParams.logo}-->" alt="<!--{$Parameters.company}-->">
+                    </a>
+                </div> 
+                <nav class="navigation">
+                    <div class="nav__mobile">
+                        <a class="navbar__open"><span></span> <i>Навигация</i></a>
                     </div>
+                    <ul class="navigation__mobile">
+                        <!--{section name=i loop=$MMenu}-->
+                            <li<!--{if $MMenu[i].smenu}--> class="dropdown"<!--{/if}-->>
+                                <!--{if $MMenu[i].smenu}-->
+                                    <a class="dropdown-link" href="<!--{$MMenu[i].sysname}-->" title="<!--{$MMenu[i].name}-->"><!--{$MMenu[i].name}--></a>
+                                <!--{else}-->
+                                    <a href="<!--{$MMenu[i].sysname}-->" title="<!--{$MMenu[i].name}-->"><!--{$MMenu[i].name}--></a>
+                                <!--{/if}-->
+                                    <!--{if $MMenu[i].smenu}-->
+                                        <ul>
+                                        <!--{section name=j loop=$MMenu[i].smenu}-->
+                                            <li><a href="<!--{$MMenu[i].smenu[j].sysname}-->" title="<!--{$MMenu[i].smenu[j].name}-->"><!--{$MMenu[i].smenu[j].name}--></a></li>
+                                        <!--{/section}-->
+                                        </ul>
+                                    <!--{/if}-->
+                            </li>
+                        <!--{/section}-->
+                        <a class="navbar__close"><span></span></a>
+                    </ul>
+                </nav>
+                <div class="callback">
+                    <a data-reveal-id="zvonok" title="<!--{$Parameters.btn_zvonok}-->" class="btn b-full b-small orange-color"><span class="lnr lnr-phone-handset"></span> <!--{$Parameters.btn_zvonok}--></a> 
                 </div>
             </div>
         </div>
