--- a/smarty/_path.html
+++ b/smarty/_path.html
@@ -5,7 +5,7 @@
 				<div class="section__title">
 					<div class="title"><!--{$path_title}--></div>
 					<div class="section__separator">
-						<p><!--{$Parameters.logo_company}--></p>
+						<p><!--{$path_preheader}--></p>
 					</div>
                 </div>
                 <div class="path">
