--- a/smarty/_company.html
+++ b/smarty/_company.html
@@ -1,38 +1,36 @@
-<div class="wrapper">
-    <div class="padding__tb__40">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section__title">
-                        <h1><!--{$Parameters.IN_index_text_h1}--></h1>
-                        <div class="section__separator">
-                            <p><!--{$Parameters.IN_index_text_dpn}--></p>
-                        </div>
+<div class="padding__tb__40">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="section__title">
+                    <h1><!--{$Parameters.IN_index_text_h1}--></h1>
+                    <div class="section__separator">
+                        <p><!--{$Parameters.IN_index_text_dpn}--></p>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <div class="advantage__title wow fadeInLeftBig center" data-wow-duration=".3s" data-wow-delay=".3s"><span>7 лет</span> <!--{$Parameters.index_successful_work}--></div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="advantage__title wow fadeInLeftBig center" data-wow-duration=".3s" data-wow-delay=".2s"><span>> 80</span> <!--{$Parameters.index_completed_objects}--></div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="advantage__title wow fadeInLeftBig center" data-wow-duration=".3s" data-wow-delay=".8s"><span>4500 кВт</span> <!--{$Parameters.index_solar_power}--></div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="advantage__title wow fadeInLeftBig center" data-wow-duration=".3s" data-wow-delay=".6s"><span>100%</span> <!--{$Parameters.index_customers}--></div>
-                        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-lg-6">
+                <div class="row">
+                    <div class="col-sm-6 col-md-6 col-lg-6">
+                        <div class="advantage__title wow fadeInLeftBig center" data-wow-duration=".3s" data-wow-delay=".3s"><!--{$Parameters.index_successful_work}--></div>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-lg-6">
+                        <div class="advantage__title wow fadeInLeftBig center" data-wow-duration=".3s" data-wow-delay=".2s"><!--{$Parameters.index_completed_objects}--></div>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-lg-6">
+                        <div class="advantage__title wow fadeInLeftBig center" data-wow-duration=".3s" data-wow-delay=".8s"><!--{$Parameters.index_solar_power}--></div>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-lg-6">
+                        <div class="advantage__title wow fadeInLeftBig center" data-wow-duration=".3s" data-wow-delay=".6s"><!--{$Parameters.index_customers}--></div>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                    <!--{$Globalpages.index}-->
-                </div>
+            </div>
+            <div class="col-md-6 col-lg-6">
+                <!--{$Globalpages.index}-->
             </div>
         </div>
     </div>
