--- a/smarty/_etaps.html
+++ b/smarty/_etaps.html
@@ -13,30 +13,33 @@
     </div>
     <div class="container-full">
         <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-12 col-lg-12 center wow fadeInLeftBig" data-wow-duration="2.5s" data-wow-delay=".1s">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 center">
                 <div class="stages__coop">
-                <ul>
-                    <li><div><span>1</span><img src="/_files/template/images/et1.png"></div> <strong>Заявка</strong> Вы оставляете <a data-reveal-id="zvonok" title="Оставить заявку">заявку на сайте</a> или звоните по телефону</li>
-                    <li><div><span>2</span><img src="/_files/template/images/et2.png"></div> <strong>Выезд</strong> Бесплатный выезд на объект. Замеряем и консультируем </li>
-                    <li><div><span>3</span><img src="/_files/template/images/et3.png"></div> <strong>Предложение</strong> Коммерческое предложение с несколькими вариантами</li>
-                    <li><div><span>4</span><img src="/_files/template/images/et4.png"></div> <strong>Договор</strong> Согласование и заключение договора с клиентом</li>
-                    <li><div><span>5</span><img src="/_files/template/images/et5.png"></div> <strong>Проект</strong> Разработка проекта и технической документации</li>
-                    <li><div><span>6</span><img src="/_files/template/images/et6.png"></div> <strong>Монтаж</strong> Выполняем монтажные работы и подключение</li>
-                    <li><div><span>7</span><img src="/_files/template/images/et7.png"></div> <strong>Зеленый тариф</strong> Подключаем <a href="<!--{$global_href}-->zelenyi-tarif.htm" title="Зеленый тариф">Зеленый тариф</a>, передаем пакет документации</li>
-                    <li><div><span>8</span><img src="/_files/template/images/et8.png"></div> <strong>Обслуживание</strong> Дальнейшее сервисное и гарантийное обслуживание</li>
-                </ul>
-            </div>
+                    <ul class="wow fadeInLeftBig" data-wow-duration="2.5s" data-wow-delay=".5s">
+                        <li class="arrow__right"><div><span>1</span><img src="/_files/template/images/et1.png"></div> <!--{$Parameters.etap1}--></li>
+                        <li class="arrow__right"><div><span>2</span><img src="/_files/template/images/et2.png"></div> <!--{$Parameters.etap2}--></li>
+                        <li class="arrow__right"><div><span>3</span><img src="/_files/template/images/et3.png"></div> <!--{$Parameters.etap3}--></li>
+                        <li class="arrow__right"><div><span>4</span><img src="/_files/template/images/et4.png"></div> <!--{$Parameters.etap4}--></li>
+                    </ul>
+                    <div class="line__arrow wow fadeInRightBig" data-wow-duration="2.5s" data-wow-delay="1.5s"></div>
+                    <ul class="wow fadeInRightBig line__twoo" data-wow-duration="2.5s" data-wow-delay="3.5s">
+                        <li class="arrow__left arrow__twoo"><div><span>5</span><img src="/_files/template/images/et5.png"></div> <!--{$Parameters.etap8}--></li>
+                        <li class="arrow__right"><div><span>6</span><img src="/_files/template/images/et6.png"></div> <!--{$Parameters.etap7}--></li>
+                        <li class="arrow__right"><div><span>7</span><img src="/_files/template/images/et7.png"></div> <!--{$Parameters.etap6}--></li>
+                        <li><div><span>8</span><img src="/_files/template/images/et8.png"></div> <!--{$Parameters.etap5}--></li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="row">
-			<div class="col-lg-12 grew__backround center wow fadeInRightBig" data-wow-duration="2s" data-wow-delay="1s">
+			<div class="col-lg-12 grew__backround center wow fadeInRightBig" data-wow-duration="2s" data-wow-delay="4.5s">
 				<ul class="footer__social">	
 					<li><!--{$Parameters.support_footer_text}--> </li>
 					<!--{if $Parameters.fb_link}-->
                     <li><a title="Facebook" target="_blank" href="<!--{$Parameters.fb_link}-->"><img src="<!--{$SITE__TEMPLATE}-->/images/social_icon/facebook.svg"></a></li>
                     <!--{/if}-->
                     <!--{if $Parameters.viber_link}-->
-                    <li><a title="Viber" target="_blank" href="viber://chat?number=+<!--{$Parameters.viber_link}-->"><img src="<!--{$SITE__TEMPLATE}-->/images/social_icon/viber.svg"></a></li>
+                    <li class="hidden-xs"><a title="Viber" target="_blank" href="viber://chat?number=+<!--{$Parameters.viber_link}-->"><img src="<!--{$SITE__TEMPLATE}-->/images/social_icon/viber.svg"></a></li>
                     <li class="visible-xs-inline-block"><a title="Viber" target="_blank" href="viber://add?number=<!--{$Parameters.viber_link}-->"><img src="<!--{$SITE__TEMPLATE}-->/images/social_icon/viber.svg"></a></li>				
                     <!--{/if}-->
                     <!--{if $Parameters.inst_link}-->
