--- a/smarty/_path.html
+++ b/smarty/_path.html
@@ -1,4 +1,4 @@
-<div class="breadcrumbs__backround wrapper">
+<div class="breadcrumbs__backround wrapper" style="<!--{$bracing_img}-->">
     <div class="container-full">
 		<div class="row">
 			<div class="col-lg-12">
