--- a/smarty/_slider.html
+++ b/smarty/_slider.html
@@ -5,7 +5,7 @@
 			<div class="owl__slider__wrapper" style="background-image: url('<!--{$slider[i].img}--><!--{$globalParams.cache_response}-->');">	
 				<div class="container">
 					<div class="row">
-						<div class="col-xs-12 col-sm-12 col-md-10 col-lg-12 center">
+						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 center">
 							<div class="owl__slider__content">
 								<div class="title"><!--{$slider[i].slide_title}--></div>
 								<div class="description"><!--{$slider[i].slide_dpn}--></div>
@@ -21,7 +21,7 @@
 		</div>
 		<!--{/section}-->
 	</div>
-	<div class="owl__slider__controls container-full">
+	<div class="hidden-xs owl__slider__controls container-full">
 		<div class="slider_arrow slider_arrow_left"><span class="lnr lnr-chevron-left"></span></div>
 		<div class="slider_arrow slider_arrow_right"><span class="lnr lnr-chevron-right"></span></div>
 	</div>
