--- a/smarty/contacts.html
+++ b/smarty/contacts.html
@@ -20,7 +20,7 @@
 							<!--{$Globalpages.contacts}-->
 						</div>
 					</div>
-					<div class="col-sm-12 col-md-6 col-lg-6 col-lg-pull-6">
+					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-lg-pull-6">
 						<div id="map">
 							<iframe width="100%" height="550" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2643.459015140196!2d35.07417521518777!3d48.505264833459925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d958645e0560d3%3A0x668147312434282!2z0YPQuy4g0JHQvtCz0LTQsNC90LAg0KXQvNC10LvRjNC90LjRhtC60L7Qs9C-LCA0LCDQlNC90LjQv9GA0L4sINCU0L3QtdC_0YDQvtC_0LXRgtGA0L7QstGB0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCA0OTAwMA!5e0!3m2!1sru!2sua!4v1612964946537!5m2!1sru!2sua" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 						</div>
@@ -29,18 +29,20 @@
 			</div>
 		</div>
 	</article>
-
+	
 	<div class="wrapper">
-		<div class="row">
-			<div class="col-md-12 col-lg-offset-3 col-lg-6">
-				<div class="grey__backround padding__lr__40">
-					<div class="section__title">
-						<h2><!--{$Parameters.fb_cont_title1}--></h2>
-						<div class="section__separator">
-							<p><!--{$Parameters.fb_cont_title2}--></p>
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-offset-3 col-lg-6">
+					<div class="grey__backround padding__lr__40">
+						<div class="section__title">
+							<h2><!--{$Parameters.fb_cont_title1}--></h2>
+							<div class="section__separator">
+								<p><!--{$Parameters.fb_cont_title2}--></p>
+							</div>
 						</div>
+						<!--{include file="forms/feedbackcontacts.htm"}-->	
 					</div>
-					<!--{include file="forms/feedbackcontacts.htm"}-->	
 				</div>
 			</div>
 		</div>
